--- a/serviços.css
+++ b/serviços.css
@@ -92,31 +92,46 @@ body {
     border-radius: 8px;
     box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
     text-align: center;
+	min-height: 480px; /* Define uma altura mínima */
+	height: 380px;
+	margin-bottom: 25px;
 }
 
 .icone {
     width: 80px;
     height: auto;
     margin-bottom: 3px;
+	margin-top: 0px;
+}
+
+.icone-ajuste {
+    margin-top: -35px; /* Ajuste para posicionar corretamente */
+}
+
+.icone-ajustar {
+	margin-top: -60px; /* Ajuste para posicionar corretamente */
 }
 
 .servico-item h3 {
     color: #0E5935;
     font-size: 1.3em;
     margin-bottom: 10px;
+	margin-left: 20px;
 }
 
 .servico-item p {
     line-height: 1.6;
 	text-align: left;
-	margin-left: 20px;
+	margin-left: 10px;
+	margin-right: 0px;
+	margin-top: 10px;
 }
 
 footer {
     background-color: #B7CB9E; 
     padding:7px;
     text-align: center;
-	margin-top: 70px;
+	margin-top: 90px;
 }
 
 .footer-container {
